add version badge

--- a/docs/docs/components/props/prop-array.mdx
+++ b/docs/docs/components/props/prop-array.mdx
@@ -3,6 +3,9 @@ title: Loop Prop
 sidebar_position: 50
 ---
 
+import VersionBadge from '@site/src/components/VersionBadge/VersionBadge';
+
+
 # Loop Prop 
 
 The Loop Prop creates an internal loop reference. It's useful for when you're including a loop inside your component and need to be able to choose the Loop Source when adding your component to a page.
@@ -40,6 +43,8 @@ Loop prop keys must be camelCased or use bracket notation (they cannot be dash-c
 :::
 
 ## Loop Props with Loop Arguments
+
+<VersionBadge version="1.0.0-beta-10" />
 
 You can combine loop props with [loop arguments](/loops/loop-arguments) to create even more flexible, reusable components. This allows you to pass both the loop source AND argument values through component props.
 
