Dynamic environment key + some cleanup (#49)
* add docs for new environemnt dynamic data key

* add version badge

* hide: Remove alpha era version badges

--- a/docs/docs/dynamic-data/dynamic-data-keys.mdx
+++ b/docs/docs/dynamic-data/dynamic-data-keys.mdx
@@ -2,8 +2,10 @@
 title: Dynamic Data Keys
 sidebar_position: 50
 last_update:
-  date: 2025-11-17
+  date: 2026-01-19
 ---
+
+import VersionBadge from '@site/src/components/VersionBadge/VersionBadge';
 
 # Dynamic Data Keys
 
@@ -129,6 +131,33 @@ For security, all URL parameters are automatically sanitized using WordPress's `
 :::tip
 This key is case sensitive. If you have a parameter of `Name` in your URL, you need to use `{url.parameter.Name}`, not `{url.parameter.name}`
 :::
+
+## Environment Keys
+
+<VersionBadge version="1.0.0-beta-14" />
+
+| Key                        | Description                                   |
+| -------------------------- | --------------------------------------------- |
+| `environment.current`      | The active rendering environment.             |
+
+`environment.current` exposes the name of the environment in which the content is currently being rendered. Possible values are:
+* `"etch"`
+* `"gutenberg"`
+* `"frontend"`
+
+This key is primarily intended for conditional rendering, allowing you to tailor output based on where the content is displayed.
+
+### Example: Environment-specific content
+
+You can use `environment.current` to include content that should only appear in editor contexts and be excluded from the frontend.
+```
+{#if environment.current === "etch" || environment.current === "gutenberg"}
+  <div class="developer-note">
+    This is a developer note that only appears in Etch and Gutenberg.
+  </div>
+{/if}
+```
+In this example, the developer note is visible in Etch and Gutenberg but omitted from the frontend render.
 
 ## Etch Custom Fields Support
 
