--- a/docs/docs/components-native/basic-nav.mdx
+++ b/docs/docs/components-native/basic-nav.mdx
@@ -1,6 +1,8 @@
 ---
 title: Nav - Basic
 sidebar_position: 120
+sidebar_custom_props:
+  badge: "WIP"
 ---
 
 import CopyToClipboard from "@site/src/components/CopyToClipboard/CopyToClipboard";
