--- a/docs/docs/components-native/off-canvas.mdx
+++ b/docs/docs/components-native/off-canvas.mdx
@@ -2,7 +2,7 @@
 title: Off Canvas
 sidebar_position: 100
 sidebar_custom_props:
-  badge: "New"
+  badge: "WIP"
 ---
 import CopyToClipboard from '@site/src/components/CopyToClipboard/CopyToClipboard';
 import DrawerJSON from '../components-native/components-native-json/drawer-component.json';
