update dynamic image

--- a/docs/docs/elements/dynamic-image.mdx
+++ b/docs/docs/elements/dynamic-image.mdx
@@ -10,10 +10,10 @@ import VersionBadge from '@site/src/components/VersionBadge/VersionBadge'
 
 <VersionBadge version="1.0.0-beta-14" />
 
-The Dynamic Image Element in Etch is a special element that handles images dynamically. It's the default/recommended way of inserting images in Etch and is compatible with component props as well.
+The Dynamic Image Element in Etch is a special element that handles WordPress images dynamically. It's the default/recommended way of inserting images in Etch for WordPress and is compatible with component props as well.
 
 :::info
-Etch has native support for IMG HTML, but this is separate from Etch's Dynamic Image element. If you want to use a `<img>` tag in Etch, you're always free to do that. The Dynamic Image Element is an alternative special element that handles images dynamically.
+Etch has native support for IMG HTML, but this is separate from Etch's Dynamic Image element. If you want to use a `<img>` tag in Etch, you're always free to do that. The Dynamic Image Element is an alternative special element designed specifically to handle WordPress images by their ID.
 :::
 
 To get started, add the Dynamic Image element to the page by clicking the Dynamic Image element in the Elements Bar.
