--- a/docs/docs/dynamic-data/dynamic-data-keys.mdx
+++ b/docs/docs/dynamic-data/dynamic-data-keys.mdx
@@ -94,6 +94,7 @@ This page will serve as the master doc page for all dynamic data keys. Feel free
 | `site.description` | The site tagline/description.                                 |
 | `site.home_url`    | The home URL of the site.                                     |
 | `site.url`         | The site URL.                                                 |
+| `site.admin_url`   | The WordPress admin area URL.                                 |
 | `site.version`     | The WordPress version.                                        |
 | `site.language`    | The site language code.                                       |
 | `site.isMultisite` | Whether the site is part of a multisite network (boolean).    |
