remove flex div and references in docs

--- a/docs/docs/components-native/off-canvas.mdx
+++ b/docs/docs/components-native/off-canvas.mdx
@@ -17,8 +17,8 @@ This page documents the recommended way to add an Off Canvas (Drawer) by importi
 
 ## Setup
 
-- Add a container or a flex-div on your site if you don't already have one.
-- You'll paste the Off Canvas component into the container or flex-div in the next step.
+- Add a container on your site if you don't already have one.
+- You'll paste the Off Canvas component into the container in the next step.
 
 ## Importing the Component
 
@@ -31,7 +31,7 @@ Then, in Etch, press <kbd>cmd</kbd> + <kbd>v</kbd> (Mac) or <kbd>ctrl</kbd> + <k
 
 ### Steps
 - Click "Copy Off Canvas Component" above, then in Etch press <kbd>cmd</kbd> + <kbd>v</kbd> (Mac) / <kbd>ctrl</kbd> + <kbd>v</kbd> (Windows) anywhere in the builder to insert the component
-- Arrange the component inside your container or flex-div.
+- Arrange the component inside your container.
 - Verify the component.
 
 ### Configuration
