--- a/docs/docs/responsive-development/custom-media.mdx
+++ b/docs/docs/responsive-development/custom-media.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tokenized Media Queries
+title: Custom Media
 sidebar_position: 3.5
 sidebar_custom_props:
   badge: 'New'
@@ -9,7 +9,7 @@ last_update:
 
 import VersionBadge from '@site/src/components/VersionBadge/VersionBadge'
 
-# Tokenized Media Queries
+# Custom Media (Tokenized Media & Container Queries)
 
 <VersionBadge version="1.2.0" />
 
